The definite article quiz now allows the case of the articles that are
tested to be selected.

--- a/definite_article.html
+++ b/definite_article.html
@@ -5,6 +5,15 @@
 	</head>
 
 	<body>
+		<input type="checkbox" id="Nominative" checked>
+		<label for="accusative">Nominative</label>
+		<input type="checkbox" id="Genitive" checked>
+		<label for="accusative">Genitive</label>
+		<input type="checkbox" id="Dative" checked>
+		<label for="accusative">Dative</label>
+		<input type="checkbox" id="Accusative" checked>
+		<label for="accusative">Accusative</label>
+
 		<p id="default">default</p>
 
 		<button id="answerButton0" onclick="answerSelectionAction(0)">DEFAULT</button>
