The user can now choose whether to see singular articles, plural
articles, or both. This required the removal of the feature that
previously prevented duplicate answers from being shown. If one selects
only one case and one number, duplicates must be shown to fill all four
answer slots.

--- a/definite_article.html
+++ b/definite_article.html
@@ -5,14 +5,23 @@
 	</head>
 
 	<body>
-		<input type="checkbox" id="Nominative" checked>
-		<label for="accusative">Nominative</label>
-		<input type="checkbox" id="Genitive" checked>
-		<label for="accusative">Genitive</label>
-		<input type="checkbox" id="Dative" checked>
-		<label for="accusative">Dative</label>
-		<input type="checkbox" id="Accusative" checked>
-		<label for="accusative">Accusative</label>
+		<div>
+			<input type="checkbox" id="Nominative" checked>
+			<label for="Nominative">Nominative</label>
+			<input type="checkbox" id="Genitive" checked>
+			<label for="Genitive">Genitive</label>
+			<input type="checkbox" id="Dative" checked>
+			<label for="Dative">Dative</label>
+			<input type="checkbox" id="Accusative" checked>
+			<label for="accusative">Accusative</label>
+		</div>
+		<div>
+			<input type="checkbox" id="Singular" checked>
+			<label for="Singular">Singular</label>
+			<input type="checkbox" id="Plural" checked>
+			<label for="Plural">Plural</label>
+		</div>
+
 
 		<p id="default">default</p>
 
