The gender of the displayed articles can now also be selected.

--- a/definite_article.html
+++ b/definite_article.html
@@ -16,12 +16,19 @@
 			<label for="accusative">Accusative</label>
 		</div>
 		<div>
+			<input type="checkbox" id="Masculine" checked>
+			<label for="Masculine">Masculine</label>
+			<input type="checkbox" id="Feminine" checked>
+			<label for="Feminine">Feminine</label>
+			<input type="checkbox" id="Neuter" checked>
+			<label for="Neuter">Neuter</label>
+		</div>
+		<div>
 			<input type="checkbox" id="Singular" checked>
 			<label for="Singular">Singular</label>
 			<input type="checkbox" id="Plural" checked>
 			<label for="Plural">Plural</label>
 		</div>
-
 
 		<p id="default">default</p>
 
